--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -10,13 +11,17 @@
   },
   "dependencies": {
     "expo": "~51.0.26",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~12.0.9",
+    "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
-    "react-native": "0.74.5",
-    "expo-linear-gradient": "~13.0.2"
+    "react-native": "0.74.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "npm-run-all": "^4.1.5"
   },
   "private": true
 }
